# RemeMnemosyne

./: BUILD.md  CI_FIX.md  Cargo.toml  Cross.toml  EMBEDDING_PIPELINE.md  MC_INTEGRATION_PLAN.md  README.md  ROTORQUANT_INTEGRATION_PLAN.md
.cargo/: config.toml
.github/workflows/: ci.yml
.qwen/: settings.json
configs/: heavy_cloud.toml  light_cloud.toml  medium_cloud.toml
crates/clone-tracker/src/: lib.rs
crates/cognitive/: Cargo.toml
crates/cognitive/src/: candle_embed.rs  engine.rs  intent.rs  lib.rs  micro_embed.rs  predictor.rs  prefetcher.rs  ssc_router.rs
crates/core/: Cargo.toml
crates/core/src/: embedding.rs  error.rs  lib.rs  math.rs  palace.rs  query.rs  traits.rs  typed_memory.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/benches/: engine_benchmark.rs
crates/engine/examples/: memory_test.rs
crates/engine/src/: api.rs  auto_pruning.rs  builder.rs  compaction.rs  config.rs  context.rs  context_stack.rs  http_server.rs  lib.rs  logging.rs  metrics.rs  palace_router.rs  providers.rs  pruner.rs  router.rs  sanitizer.rs  transaction.rs
crates/engine/tests/: integration_tests.rs  mc_integration.rs
crates/episodic/: Cargo.toml
crates/episodic/src/: artifact.rs  checkpoint.rs  lib.rs  session.rs  store.rs  summarizer.rs
crates/graph/: Cargo.toml
crates/graph/src/: entity.rs  entity_resolution.rs  lib.rs  relationship.rs  store.rs  traversal.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: index.rs  lib.rs  sharding.rs  store.rs  turboquant.rs
crates/storage/: Cargo.toml
crates/storage/src/: archive.rs  backend.rs  backup.rs  lib.rs  read_replica.rs  rocks.rs  rocks_backend.rs  sled_backend.rs  snapshot.rs
crates/temporal/: Cargo.toml
crates/temporal/src/: event.rs  lib.rs  store.rs  timeline.rs
tests/: integration_tests.rs
