[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/semantic",
    "crates/episodic",
    "crates/graph",
    "crates/temporal",
    "crates/cognitive",
    "crates/storage",
    "crates/engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mnemosyne Contributors"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rmp-serde = "1"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
rocksdb = "0.22"
sled = "0.34"
memmap2 = "0.9"

# Collections and utilities
dashmap = "6"
parking_lot = "0.12"
rayon = "1.10"
itertools = "0.14"

# Compression and quantization
half = "2"
packed_simd = { version = "0.3", package = "packed_simd_2" }

# Graph
petgraph = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Metrics and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector similarity
cosim = "0.1"
