[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/semantic",
    "crates/episodic",
    "crates/graph",
    "crates/temporal",
    "crates/cognitive",
    "crates/storage",
    "crates/engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mnemosyne Contributors"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rmp-serde = "1"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
rocksdb = "0.22"
sled = "0.34"

# Collections and utilities
dashmap = "6"
parking_lot = "0.12"
rayon = "1.10"
itertools = "0.14"

# Compression and quantization
half = "2"

# Graph
petgraph = "0.6"

# Error handling
thiserror = "2"
anyhow = "1"

# Metrics and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ML embeddings (optional, behind feature flag)
candle-core = { version = "0.8" }
candle-transformers = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-onnx = { version = "0.8" }
tokenizers = { version = "0.20" }
hf-hub = { version = "0.3" }

# Entity resolution (optional, behind feature flag)
strsim = { version = "0.11" }

# Prometheus metrics (optional, behind feature flag)
prometheus-client = { version = "0.23" }

# HTTP server (optional, behind feature flag)
axum = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["cors"] }

# Config parsing (optional, behind feature flag)
toml = { version = "0.8" }
