[package]
name = "rememnemosyne-cognitive"
version.workspace = true
edition.workspace = true

[dependencies]
rememnemosyne-core = { path = "../core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
