[package]
name = "rememnemosyne-cognitive"
version.workspace = true
edition.workspace = true

[dependencies]
rememnemosyne-core = { path = "../core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
candle-core = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }

[features]
candle-embeddings = [
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:candle-nn",
    "dep:tokenizers",
    "dep:hf-hub",
]
