[package]
name = "rememnemosyne-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rememnemosyne-core = { path = "../core" }
rememnemosyne-semantic = { path = "../semantic" }
rememnemosyne-episodic = { path = "../episodic" }
rememnemosyne-graph = { path = "../graph" }
rememnemosyne-temporal = { path = "../temporal" }
rememnemosyne-cognitive = { path = "../cognitive" }
rememnemosyne-storage = { path = "../storage" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[features]
default = ["rememnemosyne-storage/sled-storage"]
persistence = ["rememnemosyne-storage/persistence"]
