[package]
name = "rememnemosyne-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rememnemosyne-core = { path = "../core" }
rememnemosyne-semantic = { path = "../semantic" }
rememnemosyne-episodic = { path = "../episodic" }
rememnemosyne-graph = { path = "../graph" }
rememnemosyne-temporal = { path = "../temporal" }
rememnemosyne-cognitive = { path = "../cognitive" }
rememnemosyne-storage = { path = "../storage" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
regex = "1"

[features]
default = ["persistence", "archive"]
persistence = ["rememnemosyne-storage/persistence"]
sled-storage = ["rememnemosyne-storage/sled-storage"]
archive = ["rememnemosyne-storage/archive"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "engine_benchmark"
harness = false
