[package]
name = "mnemosyne-storage"
version.workspace = true
edition.workspace = true

[dependencies]
mnemosyne-core = { path = "../core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true, optional = true }
memmap2 = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[features]
default = ["rocksdb"]
rocksdb-storage = ["rocksdb"]
