[package]
name = "rememnemosyne-storage"
version.workspace = true
edition.workspace = true
description = "Pluggable storage backends for RemeMnemosyne memory engine"

[dependencies]
rememnemosyne-core = { path = "../core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

# Pure Rust backends
sled = { version = "0.34", optional = true }

# Optional C++ backend (explicit opt-in)
rocksdb = { workspace = true, optional = true }

[features]
default = ["sled-storage"]
sled-storage = ["sled"]
persistence = ["rocksdb"]
bench = []
